tests/bad/break_outside.oc
/// fail: Break statement outside of loop

def main() {
    break
}
